<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_nav_home"
        android:title="@string/title_home"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/bottom_nav_search"
        android:title="@string/title_dashboard"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/bottom_nav_orders"
        android:title="@string/title_notifications"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_nav_profile"
        android:title="@string/title_notifications"
        android:orderInCategory="4"
        app:showAsAction="always" />

</menu>