<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/padding_12dp"
        android:paddingTop="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_12dp"
        android:paddingBottom="@dimen/padding_16dp"
        android:text="@string/pending_pickup_select_pickup_problem_dialog_title"
        android:textColor="@color/profile_version_info"
        android:textSize="@dimen/font_size_15" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txt_dialog_title"
        android:background="@color/separator_bg" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_pickup_problems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:clipToPadding="false"
        android:dividerHeight="1dp"
        tools:listitem="@layout/adapter_date_picker_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/recycler_view_pickup_problems"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/txt_option_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/disabledBtn"
            android:gravity="center"
            android:text="@string/pending_pickup_select_pickup_problem_opt_cancel"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_option_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/pending_pickup_select_pickup_problem_opt_submit"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>