<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="@dimen/padding_20dp">

                <ImageView
                    android:id="@+id/icon_change_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/change_pwd_main" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_10dp"
                    android:layout_toRightOf="@+id/icon_change_pwd"
                    android:text="@string/change_password_screen_title"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="@dimen/padding_20dp"
                android:paddingRight="@dimen/padding_20dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_layout_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_input_current_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:hint="@string/change_password_current_password"
                        android:textSize="@dimen/font_size_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_layout_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_input_layout_current_password"
                    android:layout_marginTop="@dimen/padding_20dp"
                    app:hintTextAppearance="@style/TextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_input_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:hint="@string/change_password_new_password"
                        android:textSize="@dimen/font_size_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_layout_retype_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_input_layout_new_password"
                    android:layout_marginTop="@dimen/padding_20dp"
                    app:hintTextAppearance="@style/TextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_input_retype_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/change_password_retype_new_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_14" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/padding_20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn_bg"
                android:stateListAnimator="@null"
                android:text="@string/change_password_update"
                android:textAllCaps="true"
                android:textSize="@dimen/font_size_15"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</layout>