<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/panel_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/padding_4dp"
        android:paddingBottom="@dimen/padding_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/padding_16dp"
            android:text="@string/home_choose_photo"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_17"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/padding_16dp"
            android:src="@mipmap/cancel"
            android:tint="@android:color/darker_gray" />

    </RelativeLayout>

    <View
        android:id="@+id/separator_title"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/panel_top"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/panel_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator_title"
        android:background="@drawable/dialog_photo_option_tap_bg"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_20dp"
        android:paddingRight="@dimen/padding_16dp"
        android:paddingBottom="@dimen/padding_20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_photo_action_camera"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15"
            android:textStyle="normal" />
    </RelativeLayout>

    <View
        android:id="@+id/separator_take_photo"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/panel_take_photo"
        android:background="@color/separator_bg" />

    <RelativeLayout
        android:id="@+id/panel_choose_fr_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator_take_photo"
        android:background="@drawable/dialog_photo_option_tap_bg"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_20dp"
        android:paddingRight="@dimen/padding_16dp"
        android:paddingBottom="@dimen/padding_20dp">

        <TextView
            android:id="@+id/txt_choose_fr_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_photo_action_gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15"
            android:textStyle="normal" />
    </RelativeLayout>


</RelativeLayout>